<!-- res/layout/item_list.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/item_shape"
    android:orientation="horizontal">

    <!-- Imagen -->
    <ImageView
        android:id="@+id/songImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/song_description"
        android:src="@drawable/song_portrait_sample" />

    <!-- Contenedor para el nombre y el autor -->
    <LinearLayout
        android:id="@+id/song_info"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Nombre -->
        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/song_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <!-- Autor -->
        <TextView
            android:id="@+id/songAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_author"
            android:textColor="@color/white"

            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <!-- Contenedor para las vistas -->
    <LinearLayout
        android:id="@+id/viewscontainer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_shape"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/ViewCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/white"
                android:textColorLink="#FFFFFF" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:src="@drawable/song_views" />
        </LinearLayout>
    </LinearLayout>

    <!-- Botón de favoritos -->
    <ImageButton
        android:id="@+id/itemButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/favorite"
        android:src="@drawable/song_favorite_border"
        tools:ignore="ImageContrastCheck" />
</LinearLayout>
